syntax = "proto3";

package dashboard.rbac;

option go_package = "github.com/gatewayorg/blue-dashboard/api/protos/rbac;rbac";

import "rbac/common.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";
import "protoc-gen-swagger/options/annotations.proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
    schemes : HTTP
    host: "127.0.0.1:8081"
    security_definitions : {
        security : {
            key: "ApiKeyHeader"
            value : {
                type: TYPE_API_KEY
                in: IN_HEADER
                name: "Authorization"
            };
        }
    }
};

service PublicRule {
    rpc GetRule(GetRuleReq) returns (GetRuleResp) {
        option (google.api.http) = {
            get: "/rbac/rule/list"
        };
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            security : {
                security_requirement : {
                    key : "ApiKeyHeader"
                    value : {}
                }
            }
        };
    }

    rpc SetDetail(SetDetailReq) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            patch: "/rbac/set/detail"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            security : {
                security_requirement : {
                    key : "ApiKeyHeader"
                    value : {}
                }
            }
        };
    }
}

message GetRuleReq {
    uint64 page = 1 [(validate.rules).uint64.gt = 0];
    uint64 page_size = 2 [(validate.rules).uint64.gt = 0];
}

message GetRuleResp {
    uint64 total = 1;
    repeated dashboard.rbac.Rule data = 2;
}

message SetDetailReq {
    uint64 id = 1 [(validate.rules).uint64.gt = 0];
    string detail = 2 [(validate.rules).string = {min_len: 1, max_len: 255}];
}

